sources_path = ../src

lib_LIBRARIES = libta.a
libta_a_SOURCES = \
	$(sources_path)/ceff_ratio_experiment.cpp \
    $(sources_path)/circuit_netlist.cpp \
    $(sources_path)/configuration.cpp \
    $(sources_path)/design_constraints.cpp \
    $(sources_path)/liberty_library.cpp \
    $(sources_path)/parser.cpp \
    $(sources_path)/slew_degradation_experiment.cpp \
    $(sources_path)/spef_net.cpp \
    $(sources_path)/timer.cpp \
    $(sources_path)/timer_interface.cpp \
    $(sources_path)/timing_analysis.cpp \
    $(sources_path)/timing_arc.cpp \
    $(sources_path)/timing_net.cpp \
    $(sources_path)/timing_point.cpp \
    $(sources_path)/wire_delay_model.cpp

bin_PROGRAMS = ta
ta_SOURCES = \
	$(sources_path)/ceff_ratio_experiment.cpp \
    $(sources_path)/circuit_netlist.cpp \
    $(sources_path)/configuration.cpp \
    $(sources_path)/design_constraints.cpp \
    $(sources_path)/liberty_library.cpp \
    $(sources_path)/main.cpp \
    $(sources_path)/parser.cpp \
    $(sources_path)/slew_degradation_experiment.cpp \
    $(sources_path)/spef_net.cpp \
    $(sources_path)/timer.cpp \
    $(sources_path)/timer_interface.cpp \
    $(sources_path)/timing_analysis.cpp \
    $(sources_path)/timing_arc.cpp \
    $(sources_path)/timing_net.cpp \
    $(sources_path)/timing_point.cpp \
    $(sources_path)/wire_delay_model.cpp
